--- a/Source/Tailwind.Traders.Web/appsettings.json
+++ b/Source/Tailwind.Traders.Web/appsettings.json
@@ -22,6 +22,7 @@
   },
   "ApiUrl": "http://localhost:5200/v1",
   "ApiUrlShoppingCart": "http://localhost:3000",
+  "SqlConnectionString": "",
   "UseB2C": false,
   "DebugInformation": {
     "ShowDebug": false,
