--- a/Source/Tailwind.Traders.Web/ClientApp/package.json
+++ b/Source/Tailwind.Traders.Web/ClientApp/package.json
@@ -6,13 +6,14 @@
     "@azure/cosmos": "^2.0.5",
     "@microsoft/applicationinsights-react-js": "^2.2.0",
     "@microsoft/applicationinsights-web": "^2.2.0",
+    "ajv": "^6.9.1",
     "axios": "^0.18.0",
     "dotenv": "^6.1.0",
     "history": "^4.9.0",
     "i18next": "^12.0.0",
     "izitoast": "^1.4.0",
     "msal": "^1.0.1",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "react": "^16.5.2",
