--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -29,6 +29,7 @@ steps:
         command: restore
         projects: '**/*.csproj'
         feedsToUse: config
+        modifyOutputPath: true
 
     - task: DotNetCoreCLI@2
       displayName: 'Build $(buildConfiguration)'
