Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -35,3 +35,11 @@ steps:
         command: build
         projects: '**/*.csproj'
         arguments: '--configuration $(buildConfiguration)'
+    - task: AzureRmWebAppDeployment@4
+      inputs:
+        ConnectionType: 'AzureRM'
+        azureSubscription: 'Consumo interno de Microsoft Azure (eceea43d-db87-4598-a940-d35888559d8a)'
+        appType: 'webAppLinux'
+        WebAppName: 'twtdemo2'
+        packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+        RuntimeStack: 'DOTNETCORE|Latest'
