--- a/Source/Tailwind.Traders.Web/Tailwind.Traders.Web.csproj
+++ b/Source/Tailwind.Traders.Web/Tailwind.Traders.Web.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.2" />
     <PackageReference Include="Microsoft.Azure.CognitiveServices.Personalizer" Version="0.8.0-preview" />
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.1.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
